stylesheet.css
/*RESET*/
html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {margin:0; padding:0; border:0; outline:0; font-size:100%; vertical-align:baseline; background:transparent;} body {line-height: 1;}ol, ul{list-style:none;} blockquote, q{quotes:none;} blockquote:before, blockquote:after, q:before, q:after{content:'';content:none;} :focus{outline:0;} ins{text-decoration:none;} del{text-decoration:line-through;} table{border-collapse:collapse; border-spacing:0;}

/*MAIN*/
body {
	/* For hiding header */
	background-color: #EBECED;
}

a {
	color: #4C9CF1;
	text-decoration: none;
	font-weight: bold;
}

a:hover {
	color: #444;
}

img {
	max-width: 100%;
	display: block;
	margin-left: auto;
	margin-right: auto;
}
.hoverzoom:hover {
	max-width: none;
	}

ul {
	padding-left: 1em;
	margin-top: 0.5em;
	list-style-type: square;
}

ul li {
	margin-bottom: 0.3em;
}

header {
	background-color: #ffffff;
	width: 100%;
	height: 79px;
	position: fixed;
	top: 0;
	border-bottom: 2px solid #4C9CF1;
	z-index: 100;
	transition: top 0.5s ease-in-out;
}
/* To hide header */
.nav-up {
  top: -79px; /*same as header height*/
}
.nav-up-footer {
  top: -5em;
}

#logo{
	margin-left: calc(15% + 0.5em);
	margin-top: 0.2em;
	margin-right:1em;
	float: left;
	font-size: 3.4em;
	font-family: CartoGothic, Arial, sans-serif;
}
#logo:hover {
	text-decoration: underline;
	}

nav {
	vertical-align: center;
	text-align: center;
	margin-top: -0.25em;
	font-family: Open Sans, Droid Sans, Arial, sans-serif;
}

#menu-icon {
	display: hidden;
	width: 4em;
	height: 1.9em;
	background: url(res/expand_icon.png) center;
	background-repeat:no-repeat;
	background-size: 3em 3em;
	border-radius: 3px;
	margin-top: 2em;
	text-align: right;
}

a:hover#menu-icon {

	background: url(res/expand_icon_hover.png) center;
}

nav ul {
	list-style: none;
}

nav li {
	display: inline-block;
	float: left;
	padding: 1em;
	font-size: 1.5em;	
}

nav a {
	color: #2262AD
}

nav a:hover {
	text-decoration: underline;
}

.current {
	color: #2262AD;
}

section {
	background-color: white;
	margin-top: 6em;
	margin-right: 1em;
	margin-bottom: 3em;
	margin-left: 15%;
	max-width: 40em;
	position: relative;
	padding: 2em;
	font-size: 1em;
	line-height: 1.15em;
	font-family: Open Sans, Roboto, Arial, sans-serif;
}

h1 {
	font-size: 2em;
	color: #2262AD;
	line-height: 1.15em;
	margin: 20px 0 ;
}

h2 {
	font-size: 1.6em;
	color: grey;
	font-family: Old Standard TT;
	margin-top: 0.5em;
	}
	
h3 {
font-size: 1.2em;
	color: #444;
	font-family: Open Sans;
	margin-left: 0.5em;
	margin-top: 0.6em;
	}

p {
	line-height: 1.5em;
	margin-bottom: 0.2em;
}

table, th, td {
	border: 1px dotted grey;
	margin: 0.3em;
	}
th {
	background-color: #4C9CF1;
	}

.small_description {
	font-size: 0.8em;
	text-align: center;
	font-weight: bold;
	display: block;
		top: -1em;
	}

footer {
	background: url(res/opacity_bg_70.png) repeat;
	padding-top: 1em;
	position: fixed;
	bottom: 0;
	left: 0;
	right: 0;
	height: 1.5em;
	}
.left_footer {
	font-size: 0.85em;
	margin-left: 0.5em;
	float: left;
	font-family: Open Sans, Arial, sans-serif;
	color: #444;
	}

.right_footer {
	font-size: 0.7em;
	margin-right: 0.5em;
	float: right;
	vertical-align: center;
	font-family: Open Sans, Arial, sans-serif;
	}

.sortable {
	border: 1px solid grey;
	}
.sortable th, td {
	text-align: left;
	padding-right: 2em;
	padding-left: 0.3em;
	padding-top: 0.3em;
	}
.sortable th {
	background: #4C9CF1;
	padding-bottom: 0.3em;
	}
	
#contact img {
	margin-right: 2em;
	}

#credits_ref {
	list-style-type: square;
	margin-left: 1em;
	line-height: 1.2em;
	margin-top: 0.9em;
	}

a#hidden_menu {
	color: #444;
	text-decoration: none;
	font-weight: normal;
}
a:hover#hidden_menu {
	color: #444;
	text-decoration: none;
	font-weight: normal;
}

#hidden_nav {
	display: none;
}

#twitter_widget {
	float: right;
	position: absolute;
	right:10%;
	top: 6em;
	margin-bottom: 4em;
	width: 25em;
	}

.teaser_tile {
	background-color: #EBECED;
	margin-right: 1em;
	padding: 0.3em;
	}
.teaser_text {
	font-size: 0.8em;
	}
.teaser_tile a{
	color: #2262AD;
	}

#share_to {
	}

/*MEDIA QUERY*/
@media only screen and (max-width : 685px) {
	header {
		position: absolute;
	}

	#menu-icon {
		display:inline-block;
	}

	nav ul, nav:active ul { 

		display: none;
		position: absolute;
		padding: 20px;
		background: #fff;
		border: 5px solid #444;
		right: 20px;
		top: 60px;
		width: 50%;
		border-radius: 4px 0 4px 4px;

	}

	nav li {

		text-align: left;
		width: 80%;
		padding: 1em 0;
		margin: 0;

	}

	nav:hover ul {

		display: block;

	}
	section {
		margin-left: 0.5em;
		margin-right: 0.5em;
		padding: 0.5em
	}
	
	.teaser_tile {
	margin-right: 0em;
	margin-bottom: 1em;
	}
}

@media only screen and (max-width: 1700px) {
	section {
	margin-left: 5%;
	}

}

@media only screen and (max-width: 1330px) {
	#twitter_widget {
	float: left;
	position: relative;
	margin-left: 15%;
	margin-right: auto;
	top: -2em;
	right: 0;
	left: 0;
	}
	
	section {
	margin-left: 15%;
	}

}

@media only screen and (max-width: 1024) {
	
	section {
	margin-left: 1em;
	margin-right: 1em;
	}

	#twitter_widget {
	float: left;
	position: relative;
	margin-left: 1em;
	margin-right: 1em;
	top: 2em;
	right: 0;
	left: 0;
	}
}

@media only screen and (max-width : 850px) {

	#logo {
	margin-left: 0.5em;
	}
	
	nav {
	margin-left: 2em;
	vertical-align: center;
	text-align: right;
	padding-right: 2em;
	}
	
	section {
	margin-left: 0em;
	margin-right: 0em;
	padding-left: 1.5em;
	padding-right: 1em;
	}
	
	#twitter_widget {
	display: none;
	}
	
	.teaser_tile {
	margin-right: 0.5em;
	}
}

